Implementando RecyclerView no projeto

--- a/app/src/main/res/layout/view_contato.xml
+++ b/app/src/main/res/layout/view_contato.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -16,11 +17,20 @@
 
     <TextView
         android:id="@+id/emailContatoTv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:text="E=mail"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nomeContatoTv"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toStartOf="@id/celularTv"
+        android:layout_height="20dp" />
+
+    <TextView
+        android:id="@+id/celularTv"
+        android:layout_width="wrap_content"
+        android:text="Celular"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintTop_toBottomOf="@id/nomeContatoTv"
+        app:layout_constraintStart_toEndOf="@id/emailContatoTv"
+        android:layout_height="20dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
